@startuml
title Q7 - Diagramme Classes avec fonctionnalités (Version 3)

class "Jeu" {
    - hero : Aventurier
    - monstres : ArrayList<Personnage>
    - cases : ArrayList<Case>
    - fin : int[]
    - explosionAffichage : ArrayList<int[]>
    - recharger : boolean
    - gestionnaireMonstres : GestionnaireMonstres

    + Jeu()
    + getHero() : Aventurier
    + getCases() : ArrayList<Case>
    + getExplosionAffichage() : ArrayList<int[]>
    + getMonstres() : ArrayList<Personnage>
    + getCase(x : int, y : int) : Case
    + getChar(x : int, y : int) : char
    + getFin() : int[]
    + getGestionnaireMonstres() : GestionnaireMonstres
    + getSize() : int[]
    + setHero(hero : Aventurier) : void
    + setFin(fin : int[]) : void
    + setSize(size : int[]) : void

    + detruire(x : int, y : int) : void
    + getSuivant(x : int, y : int, commandeUser : Commande) : int[]
    + addBombe(x : int, y : int) : void
    + verifierDeplacement(x : int, y : int, commandeUser : Commande) : void
    + evoluer(commandeUser : Commande) : void
    + etreFini() : boolean
    + jeuToString() : String
}

class GestionnaireMonstres {
    - jeu : Jeu
    - timer : Timer

    + GestionnaireMonstres(jeu : Jeu)
    + startMonsters() : void
    + monstreAttaque(x : int, y : int) : void
    + evoluerMonster(commandeUser : Commande) : void
    + verifMort() : void
}

class Chargement {
    + {static} chargerNiveau(jeu : Jeu, nomFichier : String) : void
    + {static} convertLab(nomFichier : String, ligne : ArrayList<String>) : void
}

class DessinLaby {
    - jeu : Jeu
    - flamme : BufferedImage
    - gameOver : BufferedImage
    - win : BufferedImage
    - porte : BufferedImage
    - porteOuverte : BufferedImage
    - mur : BufferedImage
    - vide : BufferedImage
    - piege : BufferedImage
    - murFriable : BufferedImage
    - bombe : BufferedImage
    - piegeDetruit : BufferedImage
    - amulette : BufferedImage
    - spider : BufferedImage
    - troll : BufferedImage
    - ghost : BufferedImage
    - hero : BufferedImage
    - coeur : BufferedImage

    + DessinLaby(jeu : Jeu)
    + dessiner(image : BufferedImage) : void
}

package "entite" {
    abstract class Personnage {
        # vie : int

        + Personnage(x : int, y : int, vie : int)
        + getVie() : int
        + setVie(vie : int) : void
        + addVie(i : int) : void
        + setPos(x : int, y : int) : void
        + etreMort() : boolean
        + attaquer(victime : Personnage) : void
        + deplacer(jeu : Jeu, commandeUser : Commande) : void
    }

    class Aventurier {
        - inventaire : ArrayList<Item>
        - jeu : Jeu

        + Aventurier(x : int, y : int, vie : int)
        + setJeu(jeu : Jeu) : void
        + getInventaire() : ArrayList<Item>
        + haveItem(nom : String) : boolean
        + addInventaire(x : int, y : int) : void
        + attaquer(victime : Personnage) : void
        + getType() : String
    }

    class Spider {
        + Spider(x : int, y : int, vie : int)
        + getType() : String
    }

    class Troll {
        + Troll(x : int, y : int, vie : int)
        + regenerer() : void
        + getType() : String
    }

    class Ghost {
        + Ghost(x : int, y : int, vie : int)
        + getType() : String
    }
}

package "environnement" {
    abstract class Case {
        # x : int
        # y : int
        # isTraversable : boolean

        + Case(x : int, y : int)
        + getX() : int
        + getY() : int
        + getIsTraversable() : boolean
        + effet(perso : Personnage) : void
        + getType() : String
    }

    class Mur {
        + Mur(x : int, y : int)
        + getType() : String
    }

    class PiegeDetruit {
        + PiegeDetruit(x : int, y : int)
        + getType() : String
    }

    class MurFriable {
        + MurFriable(x : int, y : int)
        + getType() : String
    }

    abstract class CaseUtils {
        + CaseUtils(x : int, y : int)
        + {abstract} effet(perso : Personnage) : void
    }

    class Piege {
        - isRevele : boolean

        + Piege(x : int, y : int)
        + getIsRevele() : boolean
        + getType() : String
        + effet(perso : Personnage) : void
    }

    class Bombe {
        - jeu : Jeu

        + Bombe(x : int, y : int)
        + setJeu(jeu : Jeu) : void
        + getType() : String
        + effet(perso : Personnage) : void
    }
}

package "Item" {
    interface Item {
        + getType() : String
        + use(personnage : Personnage) : void
    }

    abstract class ItemPlacable {
        + ItemPlacable(x : int, y : int)
    }

    class Amulette {
        + Amulette(x : int, y : int)
        + getType() : String
        + effet(perso : Personnage) : void
        + use(personnage : Personnage) : void
    }
}

package "exception" {
    class ActionInconnueException {
        + ActionInconnueException(message : String)
    }

    class FichierIncorrectException {
        + FichierIncorrectException(message : String)
    }
}

' ========================
' Relations
' ========================
Case <|-- Mur
Case <|-- PiegeDetruit
Case <|-- MurFriable
Case <|-- Personnage
Case <|-- CaseUtils

CaseUtils <|-- Piege
CaseUtils <|-- Bombe
CaseUtils <|-- ItemPlacable

Item <|.. ItemPlacable
ItemPlacable <|-- Amulette

Personnage <|-- Aventurier
Personnage <|-- Spider
Personnage <|-- Troll
Personnage <|-- Ghost

ActionInconnueException --|> RuntimeException
FichierIncorrectException --|> RuntimeException

DessinJeu <|.. DessinLaby

Jeu "1" --> "1" Aventurier : hero
Jeu "1" *-- "1" GestionnaireMonstres : gestionnaireMonstres
Jeu "1" --> "*" Personnage : monstres
Jeu "1" --> "*" Case : cases

Aventurier "1" --> "*" Item : inventaire
Aventurier "1" --> "1" Jeu : jeu

GestionnaireMonstres "1" --> "1" Jeu : jeu
Chargement --> Jeu : charge

DessinLaby "1" --> "1" Jeu : jeu

@enduml
